# GameOfLifeText

./: .gitignore  README.md  pyproject.toml
src/game_of_life_text/: __init__.py  construction.py  font.py  gui.py  profile_generator.py  profile_generator_target.py  simulator.py  text.py
tests/: test_gui.py  test_profile_generator.py  test_simulator.py  test_text.py
