[project]
name = "game-of-life-text"
version = "0.1.0"
description = "A PySide6 Conway's Game of Life simulator with drawing, random seeds, and stable text."
readme = "README.md"
authors = [
    { name = "Martin Sundal Aspås", email = "martin.s.aspas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.0",
    "pydantic>=2.13.3",
    "pyside6>=6.11.0",
]

[project.scripts]
game-of-life-gui = "game_of_life_text.gui:main"
gol-gui = "game_of_life_text.gui:main"
lineprofile-generator = "game_of_life_text.profile_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "line-profiler>=5.0.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/game_of_life_text"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "B",
    "C4",
    "E",
    "EM",
    "F",
    "FA",
    "I",
    "ICN",
    "N",
    "PIE",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "COM812",
    "ISC001",
]

[tool.ty.rules]
all = "error"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = true
